--- a/areas/xdp-tutorial.org
+++ b/areas/xdp-tutorial.org
@@ -2,7 +2,7 @@
 #+TITLE: Project management for XDP-tutorial
 #+OPTIONS: ^:nil
 
-This document contains *org-mode tasks* and TODOs for [[: https://github.com/xdp-project/xdp-tutorial/][XDP-tutorial]].
+This document contains *org-mode tasks* and TODOs for [[https://github.com/xdp-project/xdp-tutorial/][XDP-tutorial]].
 It is recommended to use emacs when viewing and editing these =.org= files,
 as the github rendering view removes the =TODO= and =DONE= marking on the
 tasks.
@@ -135,7 +135,7 @@ a selftest per assignment directory.
 
 ** TODO Solution for basic04
 [2019-06-04 Tue 14:52]
-[[notmuch:id:xdp-project/xdp-tutorial/issues/46@github.com][Email from Adam Drescher: [xdp-project/xdp-tutorial] A solution for basic04 would be helpful (#46)]]
+[[https://github.com/xdp-project/xdp-tutorial/issues/46][[xdp-project/xdp-tutorial] A solution for basic04 would be helpful (#46)]]
 * Longer-term preliminary plans                                       :@long:
 ** TODO XDP-tutorial misc assignments
 
