Update: Better ndo_xdp_xmit resource management
This is stalling/depending on Intel/Magnus.

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/planning.org
+++ b/planning.org
@@ -48,3 +48,7 @@ This document tries to get an overview on who is working on what.
 
 * BPF-helper: Conntrack lookup
 - Assigned: Matt Cover <werekraken@gmail.com>
+
+* Better "TX" ndo_xdp_xmit resource management
+- Assigned: Toke / Magnus
+- Stalled on queue work from Intel (Magnus)
