--- a/xdp-project.org
+++ b/xdp-project.org
@@ -366,8 +366,10 @@ components (via selftests).
 Since driver =veth= got native-XDP support, we have an opportunity for
 writing selftests that cover both generic-XDP and native-XDP.
 
-*** NEXT bpf-selftest: improve XDP VLAN selftests
+*** DONE bpf-selftest: improve XDP VLAN selftests
+CLOSED: [2020-01-24 Fri 10:55]
 :LOGBOOK:
+- State "DONE"       from "NEXT"       [2020-01-24 Fri 10:55]
 - State "DONE"       from "TODO"       [2019-08-02 Fri 14:02]
 :END:
 
